--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "helmet": "~3.8.1",
     "jade": "~1.11.0",
     "morgan": "~1.8.2",
+    "npm": "^5.8.0",
     "watson-developer-cloud": "~2.39.0"
   },
   "engines": {
