--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hoek": "^5.0.3",
     "jade": "~1.11.0",
     "morgan": "~1.8.2",
+    "newrelic": "^4.1.1",
     "npm": "^5.8.0",
     "watson-developer-cloud": "~2.39.0"
   },
